# gbeed

./: .envrc  .gitignore  Cargo.toml  Dockerfile.cross  Dockerfile.cross.alpine  Dockerfile.cross.debian  README.md  flake.nix  justfile
.github/workflows/: ci.yml  deploy.yaml  release.yml
core/: Cargo.toml
core/benches/: cpu_bench.rs
core/benches/results/: .gitignore
core/src/: controller.rs  dmg.rs  interrupts.rs  joypad.rs  lib.rs  memory.rs  prelude.rs  serial.rs  timer.rs
core/src/apu/: envelope.rs  length_counter.rs  mod.rs  player.rs
core/src/cartrigde/: header.rs  license.rs  mbc.rs  mod.rs
core/src/cpu/: flags.rs  mod.rs  registers.rs
core/src/ppu/: mod.rs  renderer.rs  sprite.rs
core/src/utils/: instruction_box.rs  macros.rs  mod.rs  static_box.rs
core/tests/: blargg.rs  boot_test.rs  mooneye.rs
docs/: deploy-gamepi13.md
docs/anteproxecto/: README.md
docs/memoria/: AUTHOR  CREDITS  memoria_tfg.tex
docs/memoria/bibliografia/: acronimos.tex  bibconf-gl.bib  bibliografia.bib  glosario.tex
docs/memoria/contido/: arquitectura.tex  arte.tex  conclusions.tex  ferramentas.tex  futuro.tex  implementacion.tex  introducion.tex  metodoloxia.tex  validacion.tex
docs/memoria/portada/: palabras_chave.tex  resumo.tex
frontends/console/: Cargo.toml  build.rs
frontends/console/src/: controller.rs  main.rs
frontends/console/src/scenes/: emulation.rs  game_menu.rs  mod.rs  selection_menu.rs  settings_menu.rs
frontends/console/src/utils/: layout.rs  mod.rs  roms.rs
frontends/debugger/: Cargo.toml
frontends/debugger/src/: controller.rs  input.rs  main.rs  web.rs
frontends/debugger/src/controller/: listener.rs  mod.rs
frontends/debugger/src/controller/renderer/: mod.rs  texture.rs
frontends/debugger/src/scenes/: emulation.rs  mod.rs  waiting_file.rs
frontends/debugger/src/utils/: components.rs  layout.rs  mod.rs
frontends/debugger/static/: index.css  index.html  index.js
frontends/raylib_common/: Cargo.toml
frontends/raylib_common/src/: color.rs  input.rs  lib.rs  settings.rs  texture.rs  utils.rs
nix/: gbeed-package.nix  gbeed02.nix
nix/devshells/: default.nix  drm.nix  latex.nix  wasm.nix  wayland.nix  x11.nix
nix/hosts/: default.nix  gbeed02.nix
nix/lib/: default.nix
src/: error.rs  lib.rs  main.rs  prelude.rs
src/core/: cartrigde.rs  cpu.rs  interrupts.rs  joypad.rs  license.rs  memory.rs  mod.rs  ppu.rs  serial.rs  timer.rs
src/core/apu/: mod.rs
src/core/cartrigde/: header.rs  license.rs  mbc.rs  (+1 more)
src/utils/: macros.rs  mod.rs
tests/: blargg.rs  boot_test.rs
ui/: Cargo.toml
ui/src/: colors.rs  input.rs  listener.rs  main.rs  renderer.rs  texture.rs
ui/static/: index.html
(+227 files in other folders)
