[workspace]
resolver = "2"
members = [
    "core",
    "frontends/debugger",
    "frontends/console",
    "frontends/raylib_common",
]

default-members = ["frontends/console"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1  
panic = "abort"
strip = true
overflow-checks = false

[profile.profiling]
inherits = "release"
debug = "line-tables-only"
lto = "thin"
codegen-units = 1
strip = "none"
