[workspace]
resolver = "2"
members = [
    "core",
    "frontends/debugger",
    "frontends/console",
    "frontends/raylib_common",
]

default-members = ["frontends/console"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1  
panic = "abort"
strip = true
overflow-checks = false

[profile.bench]
inherits = "release"
debug = true
lto = "thin"
codegen-units = 1
strip = false
