cargo-features = ["profile-rustflags"]

[workspace]
resolver = "2"
members = [
    "core",
    "frontends/debugger",
    "frontends/console",
    "frontends/raylib_common",
]

default-members = ["frontends/console"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1  
panic = "abort"
strip = true
overflow-checks = false


[profile.bench]
inherits = "release"
debug = "line-tables-only"
strip = false
lto = "thin"
codegen-units = 16
split-debuginfo = "unpacked"
rustflags = ["-Cforce-frame-pointers=yes", "-Cforce-unwind-tables=yes"]

[profile.bench.package."*"]
debug = "line-tables-only"

