[package]
name = "gbeed-console"
description = "A console-like frontend for gbeed, meant for embedded devices"
version = "0.1.0"
edition = "2024"
default-run = "gbeed"

[[bin]]
name = "gbeed"
path = "src/main.rs"

[dependencies]
gbeed-core = { path = "../../core" }
raylib = { git = "https://github.com/raylib-rs/raylib-rs", version = "5.7.0" }
gbeed-raylib-common = { path = "../raylib_common" }
