[package]
name = "gbeed-debugger"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "gbeed-debugger"
path = "src/main.rs"

[dependencies]
gbeed-core = { path = "../../core" }
raylib = { git = "https://github.com/raylib-rs/raylib-rs", version = "5.7.0" }
gbeed-raylib-common = { path = "../raylib_common" }